RESOLVED FIXED30235
[Qt] beforeload event does not fire on script elements in XML
https://bugs.webkit.org/show_bug.cgi?id=30235
Summary [Qt] beforeload event does not fire on script elements in XML
Jakub Wieczorek
Reported 2009-10-08 14:28:17 PDT
https://bugs.webkit.org/show_bug.cgi?id=30131 made the beforeload event fire on script elements but only performed the necessary change to XMLTokenizerLibxml2.cpp, omitting the Qt tokenizer. Affected test: fast/dom/beforeload/script-before-load-xhtml.xhtml
Attachments
proposed patch (1.91 KB, patch)
2009-10-08 14:31 PDT, Jakub Wieczorek
no flags
Jakub Wieczorek
Comment 1 2009-10-08 14:31:45 PDT
Created attachment 40912 [details] proposed patch
Simon Hausmann
Comment 2 2009-10-09 04:56:28 PDT
Comment on attachment 40912 [details] proposed patch Good catch, thanks!
WebKit Commit Bot
Comment 3 2009-10-09 05:32:13 PDT
Comment on attachment 40912 [details] proposed patch Clearing flags on attachment: 40912 Committed r49388: <http://trac.webkit.org/changeset/49388>
WebKit Commit Bot
Comment 4 2009-10-09 05:32:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.