2009-10-09  Jakub Wieczorek  <faw217@gmail.com>

Reviewed by Simon Hausmann.

        [Qt] beforeload event does not fire on script elements in XML
        https://bugs.webkit.org/show_bug.cgi?id=30235

        r49194 was lacking a change to XMLTokenizerQt.cpp, equivalent to the one
        made in XMLTokenizerLibxml2.cpp.

        * dom/XMLTokenizerQt.cpp:
        (WebCore::XMLTokenizer::parseEndElement):

Canonical link: https://commits.webkit.org/40910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49388 268f45cc-cd09-0410-ab3c-d52691b4dbfc